--- a/index.html
+++ b/index.html
@@ -694,15 +694,13 @@
                   <span class="ion-ios-quote"></span>
                 </div>
                 <div class="testimonials-content">
-                  <p class="testimonial-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, cupiditate ea nam praesentium
-                    debitis hic ber quibusdam
-                    voluptatibus officia expedita corpori.
+                  <p lass="testimonial-text">
+                     I have been to Dabuka Farm through this guys,  it has been a  good experience..............
                   </p>
                 </div>
                 <div class="testimonial-author-box">
                   <img src="img/mini-testimonial-1.jpg" alt="" class="testimonial-avatar">
-                  <h5 class="testimonial-author">Albert & Erika</h5>
+                  <h5 class="testimonial-author">Trust</h5>
                 </div>
               </div>
             </div>
@@ -722,14 +720,12 @@
                 </div>
                 <div class="testimonials-content">
                   <p class="testimonial-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Omnis, cupiditate ea nam praesentium
-                    debitis hic ber quibusdam
-                    voluptatibus officia expedita corpori.
+                    I found a very good house in Belvedere through the help of this guys,thank you...............
                   </p>
                 </div>
                 <div class="testimonial-author-box">
                   <img src="img/mini-testimonial-2.jpg" alt="" class="testimonial-avatar">
-                  <h5 class="testimonial-author">Pablo & Emma</h5>
+                  <h5 class="testimonial-author">Tendai </h5>
                 </div>
               </div>
             </div>
